# RAG-Enhanced-Chat-with-pdf

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py  streamlit_app.py
archived/: app_3_llama_3_1_performance.py
documentation/: USAGE_GUIDE.md  agentic_rag_idea.md  chroma-db-setup.md  coding_order.md  main_documentation.md  special_features.md  the-art-of-chunking.md
documentation/Main_documentation/: IMPLEMENTATION_SUMMARY.md  architecture.md  main_documentation.md  special_features.md  the-art-of-chunking.md  vector_search_and_storage.md
documentation/frontend_design/: frontend-design-1.md
documentation/learning_document/: information_1.md
old_archived_code/: app_1_gemini.py  app_2_llama_3_1.py  helper_1.py  helper_2_qachat.py
src/: agent.py  api_client.py  cache.py  config.py  document_processor.py  embeddings.py  exception.py  llm_client.py  logger.py  rag_example.py  utils.py  vector_store.py  web_search.py
tests/: __init__.py  run_tests.py  test_deletion.py  test_llm.py  test_rag_agent.py  test_vector_store.py
