[project]
name = "rag-enhanced-chat-with-pdf"
version = "0.1.0"
description = "Multi-Category Document Understanding Q&A Chatbot with Agentic RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-chroma",
    "python-dotenv",
    "PyPDF2",
    "chromadb",
    "requests",
    "numpy",
]
