[project]
name = "rag-enhanced-chat-with-pdf"
version = "0.1.0"
description = "Multi-Category Document Understanding Q&A Chatbot with Agentic RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-chroma",
    "langchain-experimental",
    "python-dotenv",
    "PyPDF2",
    "chromadb",
    "requests",
    "numpy",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "duckduckgo-search>=5.0.0",
]

